{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 10,
  "lineage": "df4be028-b1bd-2e19-0355-a551f2d3f1d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tfpublicInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098c93bd9d119c051",
            "arn": "arn:aws:ec2:eu-central-1:293758481827:instance/i-071b2df4ceab6ba06",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071b2df4ceab6ba06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jumpbox-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed0b8bb69c6a2b4b",
            "private_dns": "ip-10-10-0-69.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.69",
            "public_ip": "18.197.129.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02ae1ac4f399cdc8a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0e75c27c0aefc2937"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0422d93e1ce54b357",
            "tags": {
              "Name": "tf_instance"
            },
            "tags_all": {
              "Name": "tf_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e75c27c0aefc2937"
            ]
          },
          "dependencies": [
            "aws_security_group.tfsg_public",
            "aws_subnet.tfpubsubnet",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tfigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:293758481827:internet-gateway/igw-06135a6b21efafb49",
            "id": "igw-06135a6b21efafb49",
            "owner_id": "293758481827",
            "tags": {
              "Name": "tfigw"
            },
            "tags_all": {
              "Name": "tfigw"
            },
            "vpc_id": "vpc-006bf6a424021eea9"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfpubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:293758481827:route-table/rtb-0968979de1d23399e",
            "id": "rtb-0968979de1d23399e",
            "owner_id": "293758481827",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06135a6b21efafb49",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfpubrt"
            },
            "tags_all": {
              "Name": "tfpubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-006bf6a424021eea9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfpubrtAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beb04c1a97bc8981",
            "route_table_id": "rtb-0968979de1d23399e",
            "subnet_id": "subnet-0422d93e1ce54b357"
          },
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_route_table.tfpubrt",
            "aws_subnet.tfpubsubnet",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfsg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:293758481827:security-group/sg-0e75c27c0aefc2937",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e75c27c0aefc2937",
            "ingress": [],
            "name": "tfsg_public",
            "name_prefix": "",
            "owner_id": "293758481827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_securitygroup"
            },
            "tags_all": {
              "Name": "tf_securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-006bf6a424021eea9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tfprivsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:293758481827:subnet/subnet-02f30751b3e47a236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f30751b3e47a236",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "293758481827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tfprivsubnet"
            },
            "tags_all": {
              "Name": "tfprivsubnet"
            },
            "vpc_id": "vpc-006bf6a424021eea9"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tfpubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:293758481827:subnet/subnet-0422d93e1ce54b357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0422d93e1ce54b357",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "293758481827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tfpubsubnet"
            },
            "tags_all": {
              "Name": "tfpubsubnet"
            },
            "vpc_id": "vpc-006bf6a424021eea9"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:293758481827:vpc/vpc-006bf6a424021eea9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/24",
            "default_network_acl_id": "acl-0c3d8666bb9d13b18",
            "default_route_table_id": "rtb-0db39ab33fa320d05",
            "default_security_group_id": "sg-016f5b8e6f4ce9907",
            "dhcp_options_id": "dopt-093466b1cbc4e3ddf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006bf6a424021eea9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db39ab33fa320d05",
            "owner_id": "293758481827",
            "tags": {
              "Name": "tfvpc"
            },
            "tags_all": {
              "Name": "tfvpc"
            }
          }
        }
      ]
    }
  ]
}